--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "framer-motion": "^6.3.0",
+    "m3u8-parser": "^4.7.1",
+    "mpd-parser": "^0.21.1",
     "next": "^12.1.5",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
@@ -21,7 +23,8 @@
     "react-icons": "^4.3.1",
     "react-tsparticles": "^2.1.0",
     "three": "^0.139.2",
-    "tsparticles": "^2.1.0"
+    "tsparticles": "^2.1.0",
+    "video.js": "7.6.6"
   },
   "devDependencies": {
     "eslint": "8.18.0",
