--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-intersection-observer": "^9.3.3",
     "react-tsparticles": "^2.1.0",
     "three": "^0.139.2",
     "tsparticles": "^2.1.0",
