--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mpd-parser": "^0.21.1",
     "next": "^12.1.5",
     "node-sass": "^7.0.1",
+    "prism-react-renderer": "^1.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
